docker-k8s-deploy/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels: 
    name: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: http
  selector:
    name: mysql
