docker-k8s-deploy/solo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: solo
  name: solo
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: solo
  sessionAffinity: None
  type: ClusterIP
